syntax = "proto3";

option go_package = "github.com/stone-co/the-amazing-ledger/pkg/grpc/proto";

package proto;

service LedgerService {
  rpc SaveTransaction(SaveTransactionRequest) returns (SaveTransactionResponse);
}

message SaveTransactionRequest {
  string id = 1;
  repeated Entry entries = 2;
}

message Entry  {
  string id = 1;
  string account_id = 2;
  uint64 expected_version = 3;
  Operation operation = 4;
  int32 amount = 5;
}

enum Operation {
  OPERATION_UNSPECIFIED = 0;
  OPERATION_DEBIT = 1;
  OPERATION_CREDIT = 2;
};

message SaveTransactionResponse {
}
